LJ added spacing between names
done this so it could look neater

--- a/Group_Reflection.html
+++ b/Group_Reflection.html
@@ -117,8 +117,9 @@
     </div>
 
     <div class="w-50 mx-auto">
-
+<br>
       <h3>Chris</h3>
+      <hr class=“p-2”>
       <h4>What went well?</h4>
 
       <p>
@@ -160,6 +161,7 @@
       </p>
 
       <h3>Gerard</h3>
+      <hr class=“p-2”>
       <h4>What went well?</h4>
       <p>The group dynamic worked well. All members were active and participated as consistently as they
         could manage. Meetings were well structured and enjoyable which meant that ideas and solutions
@@ -186,6 +188,7 @@
         member miss out on a conversation or a meeting, the other members could refer them to it if needed.</p>
 
       <h3>Liljana</h3>
+      <hr class=“p-2”>
       <h4>What went well?</h4>
       <p>In my opinion I believe that as a group we communicated quite well and out meetings always kept us on track and
         understanding what was expected of each of us
@@ -210,6 +213,7 @@
         teammates and wish them all the best in their future studies.</p>
 
       <h3>Matthew</h3>
+      <hr class=“p-2”>
       <h4>What went well?</h4>
       <p> Our group dynamic has remained positive and focussed. Personally, I have enjoyed working in a group more then
         I thought I was going to. I’ve liked the fact that as a group we’ve had a series of assessments to work on and
@@ -242,6 +246,7 @@
       </p>
 
       <h3>Nicole</h3>
+      <hr class=“p-2”>
       <h4>What went well?</h4>
       <p>The fact that we have already worked together in A2, made it a bit easier for co-ordinating meetings because we
         just pretty much kept the same days.
@@ -273,7 +278,7 @@
         coordinating the project. Trying to catch up and work on things at time that suits everyone was a bit tricky. I
         also had to learn to step back and leave it to others and wait for them.
         That was a challenge for me but a good lesson to learn.</p>
-
+<br>
     </div>
 
   </div>
