--- a/Team_Profile.html
+++ b/Team_Profile.html
@@ -131,9 +131,9 @@
       </p>
 
       <h2>Personal Information</h2>
-
+<br>
       <h3 id="chris">Christopher Smith – Student: S3903477</h3>
-
+      <hr class=“p-2”>
       <img alt="Christopher's photo" class="img-fluid" height="250" src="A2/assets/Chris-Mugshot.jpg" width="300">
 
       <p>I currently work in Communications, building the multi-technology mess that is the
@@ -160,7 +160,7 @@
       </p>
 
       <h3 id="gerard">Gerard Samson-Dekker – Student: S3882545</h3>
-
+      <hr class=“p-2”>
       <img alt="Gerard's profile picture" class="img-fluid" height="250" src="A2/assets/G_Pic.jpg" width="200">
 
       <p>
@@ -170,7 +170,7 @@
 
 
       <h3 id="liljana">Liljana Josevski - Student: S3909588</h3>
-
+      <hr class=“p-2”>
       <img alt="Liljana pic" class="img-fluid" height="250" src="A2/assets/Liljana profile picture.jpg" width="200">
 
       <p>
@@ -223,7 +223,7 @@
       </p>
 
       <h3 id="matt">Matthew Wotton – Student: S3905126</h3>
-
+      <hr class=“p-2”>
       <img alt="Matthew's Photo" class="img-fluid" height="250" src="A2/assets/Matthew_Headshot.jpeg" width="140">
 
       <p>
@@ -250,7 +250,7 @@
         </p>
 
       <h3 id="nicole">Nicole Clarke - Student: S3851518</h3>
-
+      <hr class=“p-2”>
       <img alt="Nicole Photo" class="img-fluid" height="250" src="A2/assets/Nicole_Photo.jpg" width="180">
 
       <p>
@@ -287,7 +287,7 @@
       </p>
 
       <h2 id="groupProcesses">Group Processes</h2>
-
+      <hr class=“p-2”>
       <p>Our group worked well together in Assignment 2 considering we had just met each
         other, therefore we did not make too many changes for Assignment 3.
         The meeting times and days as well as the agendas, recordings & notes were carried over from Assignment
@@ -316,7 +316,7 @@
       </p>
 
       <h2 id="career">Career Plans</h2>
-
+      <hr class=“p-2”>
       <p>
       <h3>Compare and Contrast the career plans, including ideal jobs, for each person</h3>
       <p>
@@ -359,29 +359,36 @@
         Two group members have chosen more analytic type roles – Crime Intelligence and Cyber Security.</p>
 
       <h3>Has the ideal job changed due to feedback from Assignment 1 or 2? </h3>
-
+<br>
       <h4>Chris</h4>
-
+      <hr class=“p-2”>
       <p>
         My goal of becoming a software developer has not changed after receiving feedback on Assignment 2. As the job
         is in such high demand, I feel that acquiring the required skills will allow me to be selective when choosing
         prospective employers or choosing to work on my own.
       </p>
-
+<br>
       <h4> Nicole</h4>
+      <hr class=“p-2”>
       <p>My ideal job has not changed since I have received more feedback. I still think my ideal job would be a
         Financial Crime Intelligence Analyst.</p>
-
+<br>
       <h4>Liljana </h4>
+      <hr class=“p-2”>
       <p>My ideal job being a Bio Medical Software Engineer has not changed. I would still love to work in bio medics
         and help humans live a better life. I really enjoyed learning about AI, ML and robotics. So, this has confirmed
         to me of my interest in biomedicine and how technology can help improve human livelihoods. </p>
-
+<br>
       <h4>Matthew</h4>
+      <hr class=“p-2”>
 I am still very much looking towards a career in Cyber Security, and this has been further solidified thanks to the content covered in the course work in week 11. And although the feedback I received around Assignment 1 and 2 was favourable around other parts of IT; I still would like to explore my curiosity around Cyber Security.
+      <br>
       <h4>Gerard</h4>
+      <hr class=“p-2”>
 No, my ideal job has not changed because of feedback from Assignment 1 or 2.  While this course has made me aware of areas that now interest me, the feedback received from the Assignments has not influenced my planned career path.
 
+    <br>
+    <br>
     <br>
   </div>
 
