adding to artefacts
minor typos corrected also

--- a/Artefacts.html
+++ b/Artefacts.html
@@ -196,6 +196,60 @@
         <li>If alert is not deactivated, second alert is sent</li>
         <li>If second alert is not deactivated then notifications sent to Emergency contacts</li>
       </ul>
+      <br>
+      <br>
+      <h3> Literature Review </h3>
+<br>
+      <h5>Defining Fatigue </h5>
+      <p>For the purposes of this project, fatigue can be taken to mean “a state of reduced physical or mental alertness which impairs performance of a range of cognitive and psychomotor tasks including driving” (Vogelpohl, Kühn, Hummel and Vollrath, 2019) and is considered to be “the outcome of a self-regulative process of managing personal discomfort and tiredness” (Fisher, Rizzo, Caird and Lee, 2011).  Considering this, it is worth considering the process of falling asleep which is not sudden, rather a “is a continuous, interwoven series of changes which begin with relaxed drowsiness, (a) succession of intermediate states, part wakefulness and part sleep in varying proportions” (Ogilvie, 2001).  The problem that this causes when a human is responsible for the control of a motor vehicle is that there is no set point at which a person will know that they are “asleep at the wheel”. </p>
+
+      <h5>The Onset of Fatigue </h5>
+      <p>Although there is some evidence that the frequency and the way in which breaks from driving are taken causes differences in the onset and development of fatigue, the drivers physical and mental state, measured before driving, have been found to contribute to its development more than these factors (Vogelpohl, Kühn, Hummel and Vollrath, 2019).  Drivers most prone to fatigue are thought to be already somewhat tired, distressed and worried, leading to high cognitive interference, before they commence driving. </p>
+
+      <p>Unfortunately, evidence points to drivers having little awareness of their own level of alertness (Fisher, Rizzo, Caird and Lee, 2011) and a study of thirty young, male drivers found 80 minutes to be the safe upper limit for monotonous highway driving (Ting, Hwang, Doong and Jeng, 2008).  Alarmingly, this is 40 minutes less than the suggested break interval made by the Department of Transport and Main Roads (Driving tired (Department of Transport and Main Roads), 2021). </p>
+
+      <p>The development, onset and severity of fatigue varies considerably among individuals but all of us are more likely to experience it when driving at times that disturb our circadian rhythm - our 24 hour biological clock (Fisher, Rizzo, Caird and Lee, 2011).  To phrase it in plain English: if you’re driving at a time of day that you’d normally be sleeping or resting, you’re more likely to be at risk. </p>
+
+
+
+      <h5>The Physiology of Fatigue and Possible Measurements </h5>
+      <p>EEG - The measurements of an electroencephalogram (EEG) have been used to identify synchronisation of specific bands of signals from different cortical areas during the onset and development of fatigue with associated blood biochemistry markers- an increase in blood glucose and serum creatinine levels (Kar, Routray and Nayak, 2011).  In other words, defined patterns in the electrical activity of the brain which change as it moves towards a state of sleep.  As things stand, measurement of brain waves while driving is beyond the scope of this project but there have been considerable developments in the portability of the technology involved, for example the development of a headband EEG (Berger, 2021) so it is possible that this is something that could be measured in future. </p>
+
+      <p>Actigraphy – This is the measurement of wrist and associated body movement. Both are more dramatic and continuous when awake than when asleep.  Actigraphy represents a convenient and portable method of measuring states of sleep, but it does lack precision as measurements tend to underestimate the onset of sleep (Ogilvie, 2001) and so by the time a change has been recorded a measurement it may be too late.  A study comparing four wrist worn devices to polysomnography, the ‘gold standard’ for sleep measurement but not something that can be practically done while driving, found that while devices could be shown to be accurate considering their cost.  However, there was some variance both among actigraphs and in their comparison to polysomnography (Mantua, Gravel and Spencer, 2016). </p>
+
+      <p>Respiratory Changes and Cardiovascular Activity – When drowsy and falling asleep, an individual’s breathing pattern changes several times.  These changes occur more frequently as tiredness progresses eventually leading to a ventilation drop as sleep begins.  Heart rate has been observed to decrease gradually at the onset of sleep with a notable drop in rate around 30 seconds before the onset of both stage 1 and stage 2 sleep.  A decrease in oxygenated haemoglobin can also be observed after stage one sleep but this is sudden and short lived (Ogilvie, 2001). </p>
+
+      <p>Slow Eye Movement (SEM) – these movements are known to commence in drowsy wakefulness and continue through the stages of fatigue and into stage 1 sleep.  They are most frequent in the minute prior to episodes of sleep and tend to disappear as sleep is entered.  Researchers have claimed that monitoring drivers with cameras programmed with a SEM detection algorithm will prevent sleep related accidents (SHIN, SAKAI and UCHIYAMA, 2010).  However, it isn’t clear that this is achievable with the front facing camera on a smartphone being positioned to face the driver.  An application designed to ascertain whether its user is too intoxicated to drive based on their eye movement, but it requires good light to operate and requires the camera to be held close to the user’s eye (Ridden, 2021). </p>
+
+      <h5>Conclusion and Recommendations </h5>
+      <p>As it has been shown that individuals are often unaware of their relative level of fatigue and focus, any measurements that can be taken and analysed determine fatigue are worth processing.  Especially as the current two hour break cycle recommendation is, arguably, inadequate. </p>
+
+      <p>While developments in EEG measurement may well facilitate the monitoring patterns in signals from different cortical areas, users would need to purchase a separate device whereas the proposed design makes use of a product that the user is more likely to already have.  As things stand, it appears that monitoring SEM would be challenging but it may remain useful to monitor drivers for less subtle body movement changes. Using currently widely available technology, the application could aim to detect changes in heart rate, respiratory rate and wrist movement as indicators of fatigue. </p>
+
+      <p>That individuals vary in their susceptibility to driver fatigue and that variations within individuals are largely determined by occurrences before the engine is started, ongoing calibration of any algorithm developed seems important to its successful operation.  The algorithm would benefit from taking the user’s circadian rhythm into account.  Calibration will be all the more important if more than one device model is used with the application.  Monitoring of a user’s general state of wellbeing over the 24 hours or so before driving would be worth considering if possible. Changes in blood pressure, resting heart rate and time and quality of sleep are all measurable and could all be considered risk factors. </p>
+<br>
+<br>
+      <h3>  Initial Terms of Use – Pending Legal Advice </h3>
+      <br>
+      <h5>Included in Terms of Use (and Testing) </h5>
+      <ul>
+      <li>Collection of Data – Data will be collected as required by the application exclusively for the purposes of improving the application’s operation, both for the individual user and, if consent is given, for the wider user community. </li>
+      <li>Data Storage – Explain data storage and use.  While the data collection process may unintentionally capture unnecessary data, only data necessary for the operation of the application will be deliberately stored and will not be shared with third parties without user consent.  Should unnecessary data be discovered by the operators of the application, it will be securely deleted. </li>
+      <li>Data Storage (Location) - Data may be stored across several jurisdictions as is common practice with cloud-based applications OR Data will be stored in Australia however due to the portability of the service may be used by the user internationally. </li>
+      <li>Use of the Application While Driving – the creators of the application accept no responsibility of the use of a mobile device while driving or any distraction that this may cause. Laws vary among states and countries and users are urged to confirm local road traffic rules. </li>
+      <li>Reliance upon the Application - The application has been designed for use as a driver’s aid and should not be relied upon.  By using the application, it is agreed that the user will take all steps necessary to remain alert while driving. </li>
+      <li>User’s Responsibility - The developers will accept no responsibility for the failure of the application to operate as advertised.  As per statement above, should the application fail to operate as designed, it remains the user’s responsibility to remain alert while driving. </li>
+      <li>GDPR – As the application will be available for use internationally, storage and use of data will be in line with EU GDPR requirements
+      <li>Choice of Law – Victoria or Australia where this cannot apply.  Jurisdiction – Courts of Victoria </li>
+
+      <h5>Definitions: </h5>
+      <ul>
+      <li>User – The user of the Drive Aware application </li>
+      <li>User community - All users of the Drive Aware application </li>
+      <li>Driving – includes but is not limited to any operation of a motorised vehicle. </li>
+      <li>The application - the Drive Aware application </li>
+      <li>GDPR - The General Data Protection Regulation 2016/679 (EU) </li>
+      </ul>
 
     </div>
 
