--- a/Project_Description.html
+++ b/Project_Description.html
@@ -1486,9 +1486,7 @@
 
       <h2 id="risks">Risks</h2>
       <br>
-      <ul>
-        <li>General risks associated with the development of applications of which no further detail is required</li>
-      </ul>
+
       <br>
       <h5>Risks Associated with Development</h5>
       <ul>
@@ -1554,7 +1552,7 @@
         chat discussions, meeting invites and requests.
         <br><br>As all team members have different responsibilities and commitments at different times of the day. We
         have found that it is not always convenient to chat at the same time. We have navigated this with all members
-        putting in the effort to regularly check regularly the chats.
+        putting in the effort to regularly check the chats.
         <br><br>Our team has agreed to twice weekly meetings so even if we have been busy with other commitments all
         team members have made the effort to attend in most cases.
       </p>
